[gd_scene load_steps=4 format=3 uid="uid://fd6jaojyegmc"]

[ext_resource type="Script" path="res://scenes/Furnitures/furniture_monitor.gd" id="1_x0qhh"]
[ext_resource type="Texture2D" uid="uid://xbj7nm4dmssp" path="res://assets/game/sierrassets furniture pack/furniture/individual sprites/part-Slice 484.png" id="2_wx8lt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ch8mr"]
size = Vector2(30, 28)

[node name="Furniture" type="Area2D" groups=["furniture"]]
collision_mask = 2
script = ExtResource("1_x0qhh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ch8mr")

[node name="PickUpCue" type="ColorRect" parent="."]
visible = false
offset_left = -9.0
offset_top = -9.0
offset_right = 9.0
offset_bottom = 9.0
color = Color(0.991622, 0.993744, 0.743518, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_wx8lt")

[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Area2D_body_exited"]
